# two_level_bp

./: .gitignore  CMakeLists.txt  README.md  all_logs.txt  bp_sim  trace.txt
analysis/: aggregate_results.py  plot_results.py  results.csv
include/: at_config.hpp  automaton.hpp  hrt.hpp  pattern_table.hpp  predictors.hpp  stats.hpp  two_level_at.hpp  types.hpp
report/: report_template.md
src/: hrt.cpp  main.cpp  pattern_table.cpp  two_level_at.cpp
traces/: eqntott_synth.txt  espresso_synth.txt  gcc_synth.txt  li_synth.txt
